docs: added docs

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,8 @@ commands =
 description = invoke sphinx-build to build the HTML docs
 basepython = python3.8
 deps = 
-    -r{toxinidir}/requirements/docs.txt
+    -r{toxinidir}/requirements.txt
+    sphinx_rtd_theme
     sphinx >= 1.7.5
 commands = sphinx-build docs "{toxinidir}/docs/_build/html" --color -W -bhtml {posargs}
            sphinx-build -b doctest docs "{toxinidir}/docs/_build/html"
