add: requirements.txt for CI and docs

--- a/tox.ini
+++ b/tox.ini
@@ -25,9 +25,7 @@ commands =
 description = invoke sphinx-build to build the HTML docs
 basepython = python3.8
 deps = 
-    -r{toxinidir}/requirements.txt
-    sphinx_rtd_theme
-    sphinx >= 1.7.5
+    -r{toxinidir}/requirements/docs.txt
 commands = sphinx-build docs "{toxinidir}/docs/_build/html" --color -W -bhtml {posargs}
            sphinx-build -b doctest docs "{toxinidir}/docs/_build/html"
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
