--- a/redmail/test/pytest.ini
+++ b/redmail/test/pytest.ini
@@ -2,4 +2,4 @@
 log_cli = 1
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] (%(name)30s) %(message)s (%(filename)s:%(lineno)s)
-norecursedirs = tests/helpers
+norecursedirs = test/helpers
