ci: fix tox getpass failed as username was not passed as env var.

--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,22 @@ envlist = py36,py38,py310
 # requires = [-rrequirements.txt]
 
 [testenv]
+passenv = USERNAME
 deps = 
     -rrequirements.txt
     pytest
 # change pytest tempdir and add posargs from command line
 commands = pytest --pyargs redmail -r chars
 
+[testenv:minimal]
+passenv = USERNAME
+deps = 
+    pytest
+# change pytest tempdir and add posargs from command line
+commands = pytest --pyargs redmail -r chars
+
 [testenv:wheeltest]
+passenv = USERNAME
 description = Build and install the wheel and run Pytests in it.
 deps = 
     pytest
