ci: add tox testenv for actual sending emails This is useful to verify the thing actually works and tests won't lie.

--- a/tox.ini
+++ b/tox.ini
@@ -62,3 +62,11 @@ deps =
 # install_command = pip install --upgrade build
 commands = python setup.py bdist_wheel sdist
            twine upload -r testpypi dist/*
+
+[testenv:test-send]
+description = Send actual emails in order to visually test content embedding and actual sending
+deps = 
+    python-dotenv
+    -rrequirements.txt
+# install_command = pip install --upgrade build
+commands = python ci/test_send.py
