global includes to ensure type inclusions in sdist

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,5 @@ include redmail/_version.py
 recursive-include redmail/email/templates *.html
 recursive-include redmail/email/templates *.txt
 recursive-include redmail/test/test_files *
+global-include *.pyi
+global-include *.typed
