--- a/tox.ini
+++ b/tox.ini
@@ -33,9 +33,8 @@ commands =
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
 basepython = python3.8
-deps = 
-    -r{toxinidir}/requirements/docs.txt
-commands = sphinx-build docs "{toxinidir}/docs/_build/html" --color -W -bhtml {posargs}
+commands = pip install .[docs]
+           sphinx-build docs "{toxinidir}/docs/_build/html" --color -W -bhtml {posargs}
            sphinx-build -b doctest docs "{toxinidir}/docs/_build/html"
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
