--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: [3.6.x, 3.8.x, 3.10.x]
+        python-version: [3.6.x, 3.8.x, 3.10.x, 3.11.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,12 +38,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements/build.txt
-        python -m pip install -e .
+        python -m pip install .[test]
      
     - name: Run test suite
+      working-directory: ./requirements
       run: |
-        python -m pytest --pyargs redmail
+        python -m pytest --pyargs redmail -W error::UserWarning -W error::FutureWarning -W error::DeprecationWarning
     
     # Seems there is a possible problem with pytest-cov parallelization
     #- name: Run test suite
